--- a/index.html
+++ b/index.html
@@ -3,5 +3,10 @@
 		<title>Portfolio. Main</title>
 	</head>
 <body>
-    Main, mhm
+    Main, mhm<br>
+	<h2>Контактные данные:</h2><br>
+	<a href="http://slegarchik.deviantart.com/" alt=""><img src="Style\IMG\linkDA.png" alt="Deviantart"></a>
+	<a href="http://vk.com/slegarchik" alt=""><img src="Style\IMG\linkVK.png" alt="VK"></a>
+	<a href="https://www.facebook.com/nastya.bichkova" alt=""><img src="Style\IMG\linkF.png" alt="Facebook"></a>
+	<br>
 </body>
