--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 		<title>Portfolio. Main</title>
 	</head>
 <body>
-    Main, mhm<br>
+	Главная, мхм<br>
 	<h2>Контактные данные:</h2><br>
 	<a href="http://slegarchik.deviantart.com/" alt=""><img src="Style\IMG\linkDA.png" alt="Deviantart"></a>
 	<a href="http://vk.com/slegarchik" alt=""><img src="Style\IMG\linkVK.png" alt="VK"></a>
