--- a/index.html
+++ b/index.html
@@ -6,7 +6,26 @@
 	Главная, мхм<br>
 	<h2>Контактные данные:</h2><br>
 	<a href="http://slegarchik.deviantart.com/" alt=""><img src="Style\IMG\linkDA.png" alt="Deviantart"></a>
-	<a href="http://vk.com/slegarchik" alt=""><img src="Style\IMG\linkVK.png" alt="VK"></a>
-	<a href="https://www.facebook.com/nastya.bichkova" alt=""><img src="Style\IMG\linkF.png" alt="Facebook"></a>
+	<div class="social youtube">
+	    	<a href="#" target="_blank"><i class="fa fa-youtube fa-2x"></i></a>
+	</div>
+	<div class="social instagram">
+	    	<a href="#" target="_blank"><i class="fa fa-instagram fa-2x"></i></a>
+	</div>
+	<div class="social facebook">
+	    	<a href="https://www.facebook.com/nastya.bichkova" target="_blank"><i class="fa fa-facebook fa-2x"></i></a>    
+	</div>
+	//<div class="social skype">
+	//   	<a href="#" target="_blank"><i class="fa fa-skype fa-2x"></i></a>
+	//</div>
+	<div class="social vk">
+	    	<a href="http://vk.com/slegarchik" target="_blank"><i class="fa fa-vk fa-2x"></i></a>    
+	</div>
+	//<div class="social telegram">
+	//    	<a href="#" target="_blank"><i class="fa fa-paper-plane fa-2x"></i></a>
+	//</div>
+	//<div class="social whatsapp">
+	//    	<a href="#" target="_blank"><i class="fa fa-whatsapp fa-2x"></i></a>
+	//</div>
 	<br>
 </body>
