--- a/index.html
+++ b/index.html
@@ -48,17 +48,21 @@
 	<div class="social facebook">
 	    	<a href="https://www.facebook.com/nastya.bichkova" target="_blank"><i class="fa fa-facebook fa-2x"></i></a>    
 	</div>
-	//<div class="social skype">
-	//   	<a href="#" target="_blank"><i class="fa fa-skype fa-2x"></i></a>
-	//</div>
+	<!--
+	<div class="social skype">
+	   	<a href="#" target="_blank"><i class="fa fa-skype fa-2x"></i></a>
+	</div>
+	-->
 	<div class="social vk">
 	    	<a href="http://vk.com/slegarchik" target="_blank"><i class="fa fa-vk fa-2x"></i></a>    
 	</div>
-	//<div class="social telegram">
-	//    	<a href="#" target="_blank"><i class="fa fa-paper-plane fa-2x"></i></a>
-	//</div>
-	//<div class="social whatsapp">
-	//    	<a href="#" target="_blank"><i class="fa fa-whatsapp fa-2x"></i></a>
-	//</div>
+	<!--
+	<div class="social telegram">
+	    	<a href="#" target="_blank"><i class="fa fa-paper-plane fa-2x"></i></a>
+	</div>
+	<div class="social whatsapp">
+	    	<a href="#" target="_blank"><i class="fa fa-whatsapp fa-2x"></i></a>
+	</div>
+	-->
 	<br>
 </body>
