--- a/index.html
+++ b/index.html
@@ -1,53 +1,35 @@
 <html>
 	<head>
-		<title>Portfolio. Main</title>
-		<script>
-			@import url(https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css);
-			.social a{
-			    text-align:center;
-			    width:46px;
-			    height:46px;
-			    float:left;
-			    background:#fff;
-			    border:1px solid #ccc;
-			    box-shadow:0 2px 4px rgba(0,0,0,0.15), inset 0 0 50px rgba(0,0,0,0.1);
-			    border-radius:46px;
-			    margin:0 10px 10px 0;
-			    padding:6px;
-			    color:#000;
-			}
-			.github a:hover{background:#191919;color:#fff;}
-			.youtube a:hover{background:#c4302b;color:#fff;}
-			.google-pluse a:hover{background:#DD4B39;color:#fff;}
-			.twitter a:hover{background:#00acee;color:#fff;}
-			.instagram a:hover{background:#3f729b;color:#fff;}
-			.facebook a:hover{background:#3b5998;color:#fff;}
-			.skype a:hover{background:#00aff0;color:#fff;}
-			.vk a:hover{background:#5d84ae;color:#fff;}
-			.odnoklassniki a:hover{background:#f93;color:#fff;}
-			.pinterest a:hover{background:#c8232c;color:#fff;}
-			.linkedin a:hover{background:#0e76a8;color:#fff;}
-			.telegram a:hover{background:#249bd7;color:#fff;}
-			.tumblr a:hover{background:#34526f;color:#fff;}
-			.windows a:hover{background:#125acd;color:#fff;}
-			.whatsapp a:hover{background:#50b154;color:#fff;}
-			.weibo a:hover{background:#d52b2b;color:#fff;}
-			.dropbox a:hover{background:#1087dd;color:#fff;}
-		</script>
+		<meta charset="UTF-8">
+		<title>Portfolio. Main</title><link rel='stylesheet prefetch' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css'>
+	  	<link rel="stylesheet" href="css/style.css">
 	</head>
 <body>
 	Главная, мхм<br>
 	<h2>Контактные данные:</h2><br>
+	<div class="container">
+		<ul class="submenu">
+		  <li><a href="https://www.facebook.com/nastya.bichkova"><i class="fa fa-facebook"></i></a></li>
+		  <li><a href="#"><i class="fa fa-twitter"></i></a></li>
+		  <li><a href="#"><i class="fa fa-instagram"></i></a></li>
+		  <li><a href="#"><i class="fa fa-google-plus"></i></a></li>
+		</ul>
+	</div>
+	  
+	  <!-- <a href="https://www.youtube.com/watch?v=lZQ6-NSUUhA" target="_blank">
+	  <i class="fa fa-youtube"></i>
+	  </a> -->
+
 	<a href="http://slegarchik.deviantart.com/" alt=""><img src="Style\IMG\linkDA.png" alt="Deviantart"></a>
-	<div class="social youtube">
+	<!-- <div class="social youtube">
 	    	<a href="#" target="_blank"><i class="fa fa-youtube fa-2x"></i></a>
 	</div>
 	<div class="social instagram">
 	    	<a href="#" target="_blank"><i class="fa fa-instagram fa-2x"></i></a>
 	</div>
 	<div class="social facebook">
-	    	<a href="https://www.facebook.com/nastya.bichkova" target="_blank"><i class="fa fa-facebook fa-2x"></i></a>    
-	</div>
+	    	<a href= target="_blank"><i class="fa fa-facebook fa-2x"></i></a>    
+	</div> -->
 	<!--
 	<div class="social skype">
 	   	<a href="#" target="_blank"><i class="fa fa-skype fa-2x"></i></a>
