--- a/index.html
+++ b/index.html
@@ -9,44 +9,31 @@
 <body>
 	Главная, мхм<br>
 	<h2>Контактные данные:</h2><br>
-	<div class="container">
-		<ul class="submenu">
-		  <li><a href="https://www.facebook.com/nastya.bichkova"><i class="fa fa-facebook"></i></a></li>
-		  <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-		  <li><a href="#"><i class="fa fa-instagram"></i></a></li>
-		  <li><a href="#"><i class="fa fa-google-plus"></i></a></li>
-		</ul>
-	</div>
-	  
-	  <!-- <a href="https://www.youtube.com/watch?v=lZQ6-NSUUhA" target="_blank">
-	  <i class="fa fa-youtube"></i>
-	  </a> -->
-
 	<a href="http://slegarchik.deviantart.com/" alt=""><img src="Style\IMG\linkDA.png" alt="Deviantart"></a>
-	<!-- <div class="social youtube">
+	<div class="social youtube">
 	    	<a href="#" target="_blank"><i class="fa fa-youtube fa-2x"></i></a>
 	</div>
 	<div class="social instagram">
 	    	<a href="#" target="_blank"><i class="fa fa-instagram fa-2x"></i></a>
 	</div>
 	<div class="social facebook">
-	    	<a href= target="_blank"><i class="fa fa-facebook fa-2x"></i></a>    
-	</div> -->
-	<!--
+	    	<a href="https://www.facebook.com/nastya.bichkova" target="_blank"><i class="fa fa-facebook fa-2x"></i></a>    
+	</div>
+<!--
 	<div class="social skype">
 	   	<a href="#" target="_blank"><i class="fa fa-skype fa-2x"></i></a>
 	</div>
-	-->
+-->
 	<div class="social vk">
 	    	<a href="http://vk.com/slegarchik" target="_blank"><i class="fa fa-vk fa-2x"></i></a>    
 	</div>
-	<!--
+<!--
 	<div class="social telegram">
 	    	<a href="#" target="_blank"><i class="fa fa-paper-plane fa-2x"></i></a>
 	</div>
 	<div class="social whatsapp">
 	    	<a href="#" target="_blank"><i class="fa fa-whatsapp fa-2x"></i></a>
 	</div>
-	-->
+-->
 	<br>
 </body>
