--- a/index.html
+++ b/index.html
@@ -1,39 +1,63 @@
-<!DOCTYPE html>
-<html lang="en" >
 <html>
 	<head>
 		<meta charset="UTF-8">
-		<title>Portfolio. Main</title><link rel='stylesheet prefetch' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css'>
-	  	<link rel="stylesheet" href="css/style.css">
+		<title>Portfolio. Main</title>
+		<link rel="stylesheet" href="css/style.css">
 	</head>
 <body>
 	Главная, мхм<br>
 	<h2>Контактные данные:</h2><br>
 	<a href="http://slegarchik.deviantart.com/" alt=""><img src="Style\IMG\linkDA.png" alt="Deviantart"></a>
-	<div class="social youtube">
-	    	<a href="#" target="_blank"><i class="fa fa-youtube fa-2x"></i></a>
-	</div>
-	<div class="social instagram">
-	    	<a href="#" target="_blank"><i class="fa fa-instagram fa-2x"></i></a>
-	</div>
-	<div class="social facebook">
-	    	<a href="https://www.facebook.com/nastya.bichkova" target="_blank"><i class="fa fa-facebook fa-2x"></i></a>    
-	</div>
-<!--
-	<div class="social skype">
-	   	<a href="#" target="_blank"><i class="fa fa-skype fa-2x"></i></a>
-	</div>
--->
-	<div class="social vk">
-	    	<a href="http://vk.com/slegarchik" target="_blank"><i class="fa fa-vk fa-2x"></i></a>    
-	</div>
-<!--
-	<div class="social telegram">
-	    	<a href="#" target="_blank"><i class="fa fa-paper-plane fa-2x"></i></a>
-	</div>
-	<div class="social whatsapp">
-	    	<a href="#" target="_blank"><i class="fa fa-whatsapp fa-2x"></i></a>
-	</div>
--->
+		<!-- <div class="social github">
+			<a href="#" target="_blank"><i class="fa fa-github fa-2x"></i></a>
+		</div> -->
+		<div class="social youtube">
+			<a href="#" target="_blank"><i class="fa fa-youtube fa-2x"></i></a>
+		</div>
+		<!-- <div class="social google-pluse">
+			<a href="#" target="_blank"><i class="fa fa-google-plus fa-2x"></i></a>
+		</div>
+		<div class="social twitter">
+			<a href="#" target="_blank"><i class="fa fa-twitter fa-2x"></i></a>
+		</div> -->
+		<div class="social instagram">
+			<a href="#" target="_blank"><i class="fa fa-instagram fa-2x"></i></a>
+		</div>
+		<div class="social facebook">
+			<a href="#" target="_blank"><i class="fa fa-facebook fa-2x"></i></a>    
+		</div>
+		<!-- <div class="social skype">
+			<a href="#" target="_blank"><i class="fa fa-skype fa-2x"></i></a>
+		</div> -->
+		<div class="social vk">
+			<a href="#" target="_blank"><i class="fa fa-vk fa-2x"></i></a>    
+		</div>
+		<!-- <div class="social odnoklassniki">
+			<a href="#" target="_blank"><i class="fa fa-odnoklassniki fa-2x"></i></a>   
+		</div>
+		<div class="social pinterest">
+			<a href="#" target="_blank"><i class="fa fa-pinterest fa-2x"></i></a>
+		</div> 
+		<div class="social linkedin">
+			<a href="#" target="_blank"><i class="fa fa-linkedin fa-2x"></i></a>
+		</div>
+		<div class="social telegram">
+			<a href="#" target="_blank"><i class="fa fa-paper-plane fa-2x"></i></a>
+		</div>
+		<div class="social tumblr">
+			<a href="#" target="_blank"><i class="fa fa-tumblr fa-2x"></i></a>
+		</div>
+		<div class="social windows">
+			<a href="#" target="_blank"><i class="fa fa-windows fa-2x"></i></a>
+		</div>
+		<div class="social whatsapp">
+			<a href="#" target="_blank"><i class="fa fa-whatsapp fa-2x"></i></a>
+		</div>
+		<div class="social weibo">
+			<a href="#" target="_blank"><i class="fa fa-weibo fa-2x"></i></a>
+		</div>
+		<div class="social dropbox">
+			<a href="#" target="_blank"><i class="fa fa-dropbox fa-2x"></i></a>
+		</div> -->
 	<br>
 </body>
