--- a/index.html
+++ b/index.html
@@ -18,7 +18,12 @@
 </head>
 
 <body>
-  <div class="pluso" data-background="transparent" data-options="big,round,line,vertical,nocounter,theme=04" data-services="vkontakte,odnoklassniki,facebook,twitter,google,moimir,email,print" data-url="https://vk.com" data-title="МЛ"></div>
+  <ul class="menu">
+    <li><a href="#"><i class="fa fa-facebook"></i></a></li>
+    <li><a href="#"><i class="fa fa-twitter"></i></a></li>
+    <li><a href="#"><i class="fa fa-instagram"></i></a></li>
+    <li><a href="#"><i class="fa fa-youtube-play"></i></a></li>
+  </ul>
 </body>
 
 </html>
