--- a/index.html
+++ b/index.html
@@ -1,30 +1,13 @@
 <!DOCTYPE html>
 <html lang="en" >
-
 <head>
   <meta charset="UTF-8">
-  <title>Portfolio. Main</title>
-      <link rel="stylesheet" href="css/style.css"> 
-      <script type="text/javascript">(function() {
-        if (window.pluso)if (typeof window.pluso.start == "function") return;
-        if (window.ifpluso==undefined) { window.ifpluso = 1;
-          var d = document, s = d.createElement('script'), g = 'getElementsByTagName';
-          s.type = 'text/javascript'; s.charset='UTF-8'; s.async = true;
-          s.src = ('https:' == window.location.protocol ? 'https' : 'http')  + '://share.pluso.ru/pluso-like.js';
-          var h=d[g]('body')[0];
-          h.appendChild(s);
-        }})();
-      </script> 
+    <title>Slegarchik</title>
+	  <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="css/style.css">
+	  <script src="js/jquery.min.js"></script>
 </head>
-
 <body>
-  <ul class="menu">
-    <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-    <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-    <li><a href="#"><i class="fa fa-instagram"></i></a></li>
-    <li><a href="#"><i class="fa fa-youtube-play"></i></a></li>
-  </ul>
 </body>
-
 </html>
 
