--- a/index.html
+++ b/index.html
@@ -4,10 +4,18 @@
   <meta charset="UTF-8">
     <title>Slegarchik</title>
 	  <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" href="css/style.css">
-	  <script src="js/jquery.min.js"></script>
+    <link rel="stylesheet" href="css/style.css">   
+    <link rel="stylesheet" type="text/css" href="css/portfolio.css">
+    <link rel="stylesheet" type="text/css" href="css/portfolio/lightbox.css">
+    <script src="js/jquery.min.js"></script>
+    <script src="js/portfolio/masonry.pkgd.min.js"></script>
+    <script src="js/portfolio/lightbox.js"></script>
+    <script src="js/portfolio.js"></script>
 </head>
 <body>
+  <h2>Портфолио</h2>
+<div id='protfolio-container' class='wrapper'>
+</div>
 </body>
 </html>
 
